fix for heights, ensuring no overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -1016,10 +1016,6 @@ nav ul li a {
   margin-top: -250px;
 }
 
-.current-overhang__tile {
-  height: 32.5em;
-}
-
 @media screen and (min-width: 1220px) {
   .current-overhang__tile {
     -moz-box-sizing: border-box;
@@ -1065,7 +1061,16 @@ nav ul li a {
     box-sizing: border-box;
     width: 100%;
     float: left;
-    height: 31.25em;
+    height: 28em;
+  }
+}
+
+@media screen and (max-width: 439px) {
+  .current-overhang__tile {
+    box-sizing: border-box;
+    width: 100%;
+    float: left;
+    height: 32.5em;
   }
 }
 
